Fix watch-video-info overflow for live streams (#2783)

--- a/src/renderer/components/watch-video-info/watch-video-info.sass
+++ b/src/renderer/components/watch-video-info/watch-video-info.sass
@@ -1,6 +1,6 @@
 .watchVideoInfo
   display: grid
-  grid-template-columns: auto max-content
+  grid-template-columns: auto minmax(min-content, 1fr)
   column-gap: 15px
   padding: 16px
 
